[gd_scene load_steps=10 format=3 uid="uid://bsu6vyppuqxep"]

[ext_resource type="Script" uid="uid://cdcnkrtrpf7ua" path="res://scripts/game_over.gd" id="1_56v3a"]
[ext_resource type="Texture2D" uid="uid://bi3l2yjbahdyo" path="res://assets/tiles/Mountain_Falls_Files/Backgrounds DRY/Mountain_Falls_Background_DRY.png" id="2_v3hpu"]
[ext_resource type="Texture2D" uid="uid://crai4tvfhtkx6" path="res://assets/tiles/Mountain_Falls_Files/Backgrounds DRY/Mountain_Falls_distant_lands_1_DRY.png" id="3_irg28"]
[ext_resource type="FontFile" uid="uid://cdt5sovnft358" path="res://assets/Font/PixelOperator8.ttf" id="7_irg28"]
[ext_resource type="Texture2D" uid="uid://0jsm5uar6lcr" path="res://assets/buttons/replay_button.png" id="10_u27yo"]
[ext_resource type="FontFile" uid="uid://dfnsphvw8qxps" path="res://assets/Font/PixelOperator8-Bold.ttf" id="11_qllq4"]
[ext_resource type="Texture2D" uid="uid://w3xenwyefi1u" path="res://assets/buttons/menu_button.png" id="12_o57t2"]

[sub_resource type="LabelSettings" id="LabelSettings_tei00"]
font = ExtResource("11_qllq4")
font_size = 128
outline_size = 30
outline_color = Color(0.00489983, 0.00489983, 0.00489983, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2jtsn"]
font = ExtResource("7_irg28")
font_size = 90
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Node2D"]
script = ExtResource("1_56v3a")

[node name="MountainFallsBackgroundDry" type="Sprite2D" parent="."]
position = Vector2(575.5, 324.5)
scale = Vector2(0.361562, 0.309135)
texture = ExtResource("2_v3hpu")

[node name="MountainFallsDistantLands1Dry" type="Sprite2D" parent="."]
position = Vector2(579, 497)
scale = Vector2(0.361205, 0.376786)
texture = ExtResource("3_irg28")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Replay_Button" type="TextureButton" parent="."]
offset_left = -128.0
offset_top = 38.0
offset_right = 512.0
offset_bottom = 678.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(319, 319)
texture_normal = ExtResource("10_u27yo")

[node name="Label2" type="Label" parent="."]
offset_left = 24.0
offset_top = 87.0
offset_right = 1128.0
offset_bottom = 215.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_tei00")

[node name="Menu_Button" type="TextureButton" parent="."]
offset_left = 655.0
offset_top = 37.0
offset_right = 1295.0
offset_bottom = 677.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(319, 319)
texture_normal = ExtResource("12_o57t2")

[node name="Score" type="Label" parent="."]
offset_left = 232.0
offset_top = 541.0
offset_right = 936.0
offset_bottom = 669.0
text = "Score: "
label_settings = SubResource("LabelSettings_2jtsn")

[connection signal="mouse_entered" from="Replay_Button" to="." method="_on_replay_button_mouse_entered"]
[connection signal="mouse_exited" from="Replay_Button" to="." method="_on_replay_button_mouse_exited"]
[connection signal="pressed" from="Replay_Button" to="." method="_on_replay_button_pressed"]
[connection signal="mouse_entered" from="Menu_Button" to="." method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="Menu_Button" to="." method="_on_menu_button_mouse_exited"]
[connection signal="pressed" from="Menu_Button" to="." method="_on_menu_button_pressed"]
